# chitchats-public

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  ChitChats-Haiku.spec  ChitChats.spec  ClaudeCodeRP.spec  Makefile  README.en.md  README.md  SETUP.md  app-server-voice-mode.md  backend_todo.md  chitchats_mcp.json  difference_from_private.md  frontend_todo.md  how_it_works.ko.md  how_it_works.md  package-lock.json  package.json  plan.md  pyproject.toml  report.md  voice-transcription.md
.claude/: settings.local.json
.claude/agents/: agent-creator.md
.github/workflows/: windows-installer.yml
agents/: README.md
agents/group_의사들/dr_chen/: recent_events.md
agents/group_의사들/dr_kim/: recent_events.md
agents/group_의사들/dr_patel/: recent_events.md
agents/group_의사들eng/dr_chen_eng/: consolidated_memory.md  recent_events.md
agents/group_의사들eng/dr_kim_eng/: consolidated_memory.md  recent_events.md
agents/group_의사들eng/dr_martinez_eng/: consolidated_memory.md  recent_events.md
agents/group_의사들eng/dr_patel_eng/: consolidated_memory.md  recent_events.md
agents/group_회의실_도구/: group_config.yaml
agents/group_회의실_도구/투표원/: characteristics.md  in_a_nutshell.md
backend/: README.md  auth.py  background_scheduler.py  conftest.py  database.py  generate_hash.py  launcher.py  main.py  models.py  schemas.py  testing.py  tray.py
backend/chatroom_orchestration/: __init__.py  agent_ordering.py  context.py  handlers.py  orchestrator.py
backend/chatroom_orchestration/tape/: __init__.py  executor.py
backend/config/: __init__.py  agent_io.py  claude_tools.yaml  codex_tools.yaml  constants.py  conversation_context.yaml  guidelines_3rd.yaml  loaders.py  parser.py  prompt_builder.py  system_prompt.yaml  tools.yaml  validation.py
backend/config/tools/: conversation_context.yaml  guidelines_3rd.yaml  tools.yaml
backend/core/: __init__.py  agent_config_service.py  agent_service.py  app_factory.py  auth.py  client_pool.py  dependencies.py  logging.py  manager.py  response_generator.py  settings.py  sse.py
backend/core/config/: __init__.py  loaders.py  tool_config.py  validation.py
backend/crud/: __init__.py  agents.py  cached.py  cleanup.py  helpers.py  messages.py  room_agents.py  rooms.py  voice_audio.py
backend/domain/: __init__.py  action_models.py  agent_config.py  agent_parser.py  contexts.py  etc_models.py  streaming.py
backend/infrastructure/: __init__.py  generated_images.py  images.py  scheduler.py  yaml_cache.py
backend/infrastructure/database/: __init__.py  connection.py  migrations.py  models.py
backend/launch/: __init__.py  agents_bootstrap.py  browser.py  instance.py  logging_setup.py  mcp_mode.py  network.py  paths.py  run.py  windows_compat.py
backend/launch/setup/: __init__.py  gui.py  (+2 more)
backend/mcp_servers/: __init__.py  action_server.py  base.py  etc_server.py  guidelines_server.py  image_server.py  social_server.py
backend/middleware/: __init__.py  request_id.py
backend/orchestration/: context.py  orchestrator.py  response_generator.py
backend/providers/: __init__.py  base.py  base_pool.py  configs.py  factory.py  mcp_config.py  prompt_builder.py  prompts_base.yaml
backend/routers/: __init__.py  agent_management.py  agents.py  auth.py  debug.py  exports.py  mcp_tools.py  messages.py  providers.py  room_agents.py  rooms.py  serve_mcp.py  settings.py  sse.py  tools_api.py  user.py  voice.py  voice_realtime.py
backend/schemas/: __init__.py  agent.py  base.py  message.py  room.py
backend/sdk/: __init__.py  action_tools.py  client_pool.py  guidelines_tools.py  manager.py  memory_brain_manager.py  options_builder.py  stream_parser.py
backend/services/: agent_config_service.py  agent_service.py  cache_service.py  prompt_builder.py
backend/tests/: conftest.py  helpers.py  testing.py
backend/utils/: cache.py  write_queue.py
docs/: CODEX_CLI_TIPS.md  CODEX_CLI_TIPS_KO.md  SETUP.md  claude-code-sdk-with-windows.md  codex_app.md  how_it_works.md  sequence-diagrams.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: agent-management.spec.ts  app.spec.ts  chat-room.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  setup-wizard.spec.ts
frontend/public/: how_to_use.ko.md  how_to_use.md  manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: main.json
frontend/src-tauri/src/: lib.rs  main.rs  setup.rs  sidecar.rs  window_state.rs
records/: teto_with_doctors_251127.md
scripts/archive/: README.md  build_tauri.ps1
scripts/evaluation/: analyze_results.py  parse_transcripts.py
scripts/install/: install.ps1  install.sh
scripts/setup/: create_env.py  generate_hash.py
scripts/testing/: README_LOAD_TEST.md  load_test_network.py
scripts/windows/: build_exe.ps1  dev.ps1  runtime_hook_haiku.py
voice_server/: main.py  pyproject.toml  tts_service.py
(+151 files in other folders)
