[project]
name = "chitchats-backend"
version = "0.1.0"
description = "Multi-Claude chat room application backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Database
    "asyncpg>=0.29.0",
    "SQLAlchemy>=2.0.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "sse-starlette>=3.0.0",

    # AI Integration
    "claude-agent-sdk>=0.1.30",
    "mcp>=1.0.0",
    "fastapi-mcp>=0.3.0",

    # Auth
    "bcrypt>=4.2.0",
    "PyJWT>=2.10.0",

    # Background tasks
    "APScheduler>=3.10.0",

    # Config & utils
    "python-dotenv>=1.0.0",
    "ruamel.yaml>=0.18.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.29.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "faker>=33.1.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.4",
    "aiosqlite>=0.21.0",  # For in-memory test database
    "httpx>=0.27.0",      # For test client (AsyncClient)
    "pyinstaller>=6.0.0", # For building desktop app sidecar
]

[tool.ruff]
# Loose configuration for development
line-length = 120
target-version = "py311"

# Enable auto-fixing by default
fix = true

# Select minimal rule sets - focus on critical issues only
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
]

# Ignore common/minor issues
lint.ignore = [
    "E501",  # line too long (handled by formatter)
    "E712",  # comparison to True/False - allow == False for SQLAlchemy
    "E741",  # ambiguous variable name
    "E402",  # module level import not at top of file - allow for conditional imports
    "F841",  # local variable assigned but never used - common in tests
]

# Auto-fix these rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    "node_modules",
    "frontend",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.poe.tasks]
# Backend
backend = { shell = "cd backend && uvicorn main:app --host 0.0.0.0 --port 8000", help = "Run backend dev server" }
backend-prod = { shell = "cd backend && uvicorn main:app --host 0.0.0.0 --port 8000", help = "Run backend production server" }

# Frontend
frontend-install = { shell = "cd frontend && npm install", help = "Install frontend dependencies" }
frontend-dev = { shell = "cd frontend && npm run dev", help = "Run frontend dev server" }
frontend-build = { shell = "cd frontend && npm run build", help = "Build frontend for production" }
frontend-lint = { shell = "cd frontend && npm run lint", help = "Lint frontend code" }
frontend-preview = { shell = "cd frontend && npm run preview", help = "Preview frontend production build" }

# Testing
test = { shell = "cd backend && pytest --cov=backend --cov-report=term-missing", help = "Run tests with coverage" }
test-verbose = { shell = "cd backend && pytest -v --cov=backend --cov-report=term-missing", help = "Run tests with verbose output" }

# Installation
install-all = { shell = "uv sync && cd frontend && npm install", help = "Install all dependencies (backend + frontend)" }
