[project]
name = "chitchats-voice-server"
version = "0.1.0"
description = "TTS voice server for ChitChats using Qwen3-TTS"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.4.0",
]
transformers = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
]
all = [
    "chitchats-voice-server[vllm,transformers]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
